--- a/src/app/input-box/input-box.component.html
+++ b/src/app/input-box/input-box.component.html
@@ -1,1 +1,5 @@
-<p>input-box works!</p>
+<div class="input-box-container">
+<div class="input-box">
+    <textarea> test </textarea>
+</div>
+</div>
