--- a/src/app/input-box/input-box.component.html
+++ b/src/app/input-box/input-box.component.html
@@ -1,5 +1,8 @@
-<div class="input-box-container">
-<div class="input-box">
-    <textarea> test </textarea>
+<div class="debug-info">
+    <pre>{{ debugInfo }}</pre>
 </div>
+<div class="input-box-container">
+    <div class="input-box">
+        <textarea> test </textarea>
+    </div>
 </div>
