--- a/src/app/input-box/input-box.component.html
+++ b/src/app/input-box/input-box.component.html
@@ -1,5 +1,6 @@
 <div class="debug-info">
     <pre>{{ debugInfo }}</pre>
+    <p>debug here</p>
 </div>
 <div class="input-box-container">
     <div class="input-box">
