--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,6 @@
 .chat-shell {
+	/* CSS variable used to indicate keyboard offset (set by input-box component) */
+	--keyboard-offset: 0px;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -17,6 +19,10 @@
 	overflow-y: auto;
 	padding: 12px;
 	background: #f5f5f7;
+	/* Move the visible area up when keyboard is present and add extra bottom padding */
+	padding-bottom: calc(88px + var(--keyboard-offset));
+	transform: translateY(calc(-1 * var(--keyboard-offset)));
+	transition: transform 0.18s ease, padding-bottom 0.18s ease;
 }
 
 .message {
